--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="contact, plan d'accès, question" />
     <link rel="stylesheet" href="./css/style-reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="icon" href="./images/favicons/favicon-16x16.png" type="image/x-icon" />
     <title>Document</title>
   </head>
   <body>
