--- a/nosclassiques.html
+++ b/nosclassiques.html
@@ -6,6 +6,7 @@
     <meta name="description" content="" />
     <link rel="stylesheet" href="./css/style-reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="icon" href="./images/favicons/favicon-16x16.png" type="image/x-icon" />
     <title>Document</title>
   </head>
   <body>
