--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./css/style-reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="icon" href="./images/favicons/favicon-16x16.png" type="image/x-icon" />
-    <title>Document</title>
+    <title>Accueil</title>
   </head>
   <body>
     <nav>
