--- a/nosclassiques.html
+++ b/nosclassiques.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/style-reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="icon" href="./images/favicons/favicon-16x16.png" type="image/x-icon" />
-    <title>Document</title>
+    <title>Nos classiques</title>
   </head>
   <body>
     <header>
