--- a/nouveautes.html
+++ b/nouveautes.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/style-reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="icon" href="./images/favicons/favicon-16x16.png" type="image/x-icon" />
-    <title>Document</title>
+    <title>Nouveautés</title>
   </head>
   <body>
     <header>
